# kathu-rpg

./: .ghc.environment.x86_64-mingw32-8.4.4  .gitignore  ChangeLog.md  LICENSE  README.md  kathu.cabal  kathu.prof  settings.config  settings.yaml  stack.yaml
assets/actors/evil-eye/: evil-eye.entity  evil-eye.prefab
assets/actors/player/: player.entity  player.entity.json  player.prefab
assets/damage/: magical.damage  physical.damage  stun.damage
assets/editor/: tile-selector.entity  tile-selector.prefab
assets/floor/: default.floor  ice.floor
assets/fonts/: VT323-Regular-28.font  VT323-Regular-54.font
assets/items/: apple.item  key-gold.item  key-silver.item  potion-health.item  potion-mana.item  pumpkin.item
assets/items/key-items/: boomerang.item  spirit-lantern.item
assets/items/keys/: key-big.item  key-chest.item  key-odd.item  key-small.item
assets/items/pickup/: mana-orb.item
assets/items/weapons/: bomb.item  sword.item
assets/lang/: english.lang  esperanto-misc.lines  esperanto.lang
assets/lang/esperanto/: items.lines
assets/maps/: test-map.world
assets/palettes/: default.palette  night.palette  poison.palette  rainbow.palette  volcanic.palette
assets/props/: block.entity  block.prefab  boulder.entity  brick.entity  cheest-odd.entity  chest-locked.entity  chest-odd.entity  door-brick-wide-unlocked.entity  door-brick-wide.entity  door-stairs-down.entity  grass.entity  pot-small.entity  pot-small.prefab
assets/props/container/: chest-locked.entity  chest-odd.entity
assets/props/containers/: chest-locked.prefab  chest-odd.prefab
assets/props/doors/: door-brick-wide-unlocked.entity  door-brick-wide-unlocked.prefab  door-brick-wide.entity  door-brick-wide.prefab  door-stairs-down.entity  door-stairs-down.prefab  locked-brick-door.prefab  locked-door.lua  powered-brick-door-cold.entity  powered-brick-door-cold.prefab  powered-brick-door.entity  powered-brick-door.prefab  powered-door.lua
assets/props/switches/: button-huge.entity  button-huge.prefab  button-partial-press.lua  button.entity  button.lua  button.prefab  lever.lua  orb-switch.entity  orb-switch.lua  orb-toggle.entity  orb-toggle.lua  orb-toggle.prefab
assets/tiles/: brick-cold-wall.tile  brick-door-unlocked.tile  brick-door.tile  brick-floor.tile  brick-wall-cold.tile  brick-wall-vibrant.tile  brick-wall.tile  example-wall.tile  invisible-floor.tile  pipe-ceiling.tile  pipe-vertical.tile  rough-stone-wall-left.tile  rough-stone-wall-middle.tile  rough-stone-wall-right.tile  rough-stone-wall-single.tile  spikes.tile  tall-grass.tile
assets/ui/: config.hud  config.ui
assets/world-spaces/: test-map.world
assets/worldspaces/: dungeon-t2-island.world  dungeon-t2-island.world.disabled  dungeon-t2-volcano.world  dungeon-t2-volcano.world.disabled  test.lua  test.world
exe/: Main.hs
exec/: Main.hs
exec/Kathu/: App.hs
exec/Kathu/App/: Events.hs  Init.hs  Main.hs  SDLCommon.hs  System.hs  World.hs
exec/Kathu/App/Data/: Controls.hs  Dictionary.hs  KathuStore.hs  Library.hs  Settings.hs
exec/Kathu/App/Graphics/: Debug.hs  Drawing.hs  Font.hs  Image.hs  ImageManager.hs  Render.hs  RenderBuffer.hs  UI.hs
exec/Kathu/App/Tools/: Commands.hs  EventHandler.hs  EventQueue.hs  ToolMode.hs  ToolSystem.hs
exec/Kathu/Editor/: Dialogs.hs  File.hs  GtkUtil.hs  Main.hs  Panels.hs  Resources.hs  Types.hs
exec/Kathu/Editor/Dialogs/: Entity.hs
exec/Kathu/Editor/Util/: GtkMisc.hs  PropertyGrid.hs
src/: Game.hs  Init.hs  Main.hs  Render.hs  SDLCommon.hs  Templates.hs  Util.hs
src/Entity/: Action.hs  Components.hs  Damage.hs  Item.hs  Player.hs  Prototype.hs  Resource.hs  System.hs  Timing.hs
src/Graphics/: Color.hs  Drawable.hs
src/IO/: Components.hs  File.hs  Graphics.hs  Library.hs  Parsing.hs  SDL.hs  Settings.hs  World.hs
src/Kathu/: App.hs  Game.hs  Init.hs  Render.hs  SDLCommon.hs  Templates.hs  Util.hs
src/Kathu/Entity/: Action.hs  ActorState.hs  Components.hs  Damage.hs  Item.hs  Player.hs  Prototype.hs  PrototypeTemplate.hs  Resource.hs  System.hs  Timing.hs
src/Kathu/Graphics/: Camera.hs  Color.hs  Drawable.hs  Drawing.hs  ImageManager.hs  Palette.hs  RenderBuffer.hs  UI.hs
src/Kathu/IO/: Components.hs  Entity.hs  External.hs  File.hs  Graphics.hs  Item.hs  Library.hs  Misc.hs  Parsing.hs  ParsingLibrary.hs  Settings.hs  World.hs
src/Kathu/Language/: Config.hs  Parser.hs
src/Kathu/Network/: Room.hs  Server.hs
src/Kathu/Physics/: Body.hs  PhysSystem.hs  Shapes.hs  System.hs
src/Kathu/Util/: Misc.hs  MultiDimVector.hs  SDLCommon.hs  Timing.hs
src/Kathu/World/: Field.hs  Tile.hs  Time.hs  WorldSpace.hs  WorldSystem.hs
src/Language/: Config.hs  Parser.hs
src/Network/: Room.hs  Server.hs
src/Physics/: Shapes.hs
src/World/: Tile.hs
test/: EntityTests.hs  GraphicsTests.hs  PhysicsTests.hs  Test.hs
test/Kathu/Test/: Entity.hs  Graphics.hs  Util.hs  World.hs
verda/: .hlint.yaml  ChangeLog.md  LICENSE  stack.yaml  verda.cabal
verda/src/Verda/: App.hs  Audio.hs  Logger.hs  Time.hs  World.hs
verda/src/Verda/Event/: Controls.hs  EventHandler.hs
verda/src/Verda/Graphics/: Color.hs  Components.hs  Drawing.hs  Fonts.hs  Icons.hs  Renderer.hs  Shaders.hs  SpriteBuffer.hs  SpriteManager.hs  Sprites.hs
verda/src/Verda/IO/: Dictionary.hs  Directory.hs  Files.hs
verda/src/Verda/Parsing/: Aeson.hs  Counting.hs  Yaml.hs
verda/src/Verda/System/Tile/: Chunks.hs  Components.hs  Renderer.hs
verda/src/Verda/Util/: Apecs.hs  Containers.hs  Dependency.hs  Flow.hs  Types.hs
verda/test/: Test.hs
verda/test/Verda/Test/Graphics/: Color.hs
