cabal-version:       2.4
name:                kathu
version:             0.1.11.4
-- synopsis:
-- description:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Erin Torno
-- maintainer:
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md

common kathu-extensions
  default-extensions: BangPatterns
                      ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      ExplicitForAll
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      NamedFieldPuns
                      OverloadedLabels
                      OverloadedStrings
                      PatternSynonyms
                      RankNTypes
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators

library
  import:           kathu-extensions
  exposed-modules:  Kathu.ControlEvents
                    Kathu.Game
                    Kathu.Init
                    Kathu.Language
                    Kathu.Random
                    -- Config
                    Kathu.Config.Controls
                    Kathu.Config.KathuStore
                    Kathu.Config.Dictionary
                    Kathu.Config.Settings
                    -- Editor
                    Kathu.Editor.Tools.Commands
                    Kathu.Editor.Tools.EventHandler
                    Kathu.Editor.Tools.EventQueue
                    Kathu.Editor.Tools.Info
                    Kathu.Editor.Tools.ToolMode
                    Kathu.Editor.Tools.ToolSystem
                    -- Entity
                    Kathu.Entity.Action
                    Kathu.Entity.ActorState
                    Kathu.Entity.Components
                    Kathu.Entity.Damage
                    Kathu.Entity.Item
                    Kathu.Entity.LifeTime
                    Kathu.Entity.Physics.BodyConfig
                    Kathu.Entity.Physics.CollisionGroup
                    Kathu.Entity.Physics.Floor
                    Kathu.Entity.Prefab
                    Kathu.Entity.Resource
                    Kathu.Entity.System
                    -- Graphics
                    Kathu.Graphics.Debug
                    Kathu.Graphics.Palette
                    Kathu.Graphics.UI
                    -- World
                    Kathu.World.ChunkBuilder
                    Kathu.World.Loader
                    Kathu.World.Stasis
                    Kathu.World.Tile
                    Kathu.World.Time
                    Kathu.World.WorldSpace
                    -- Scripting
                    Kathu.Scripting.Event
                    Kathu.Scripting.Lua
                    Kathu.Scripting.Lua.Component
                    Kathu.Scripting.Lua.Global
                    Kathu.Scripting.Lua.Types
                    Kathu.Scripting.Variables
                    Kathu.Scripting.Wire
                    -- Utility
                    Kathu.Util.Polygon
  build-depends:    base                    ^>=4.13,
                    verda,
                    apecs                   ^>=0.9.1,
                    apecs-physics           ^>=0.4.4,
                    containers              ^>=0.6.2,
                    hgeometry               >=0.10    && <0.11,
                    hgeometry-combinatorial >=0.10    && <0.11,
                    hashable                >=1.3     && <1.4,
                    hashtables              >=1.2.0   && <1.3.0,
                    hslua                   >=1.3.0   && <1.4.0,
                    sdl2                    ^>=2.5.2,
                    yaml                    ^>=0.11.3,
                    libyaml                 ^>=0.1.2,
                    text, bytestring,
                    lens, linear, mtl, primitive, random, scientific, unordered-containers, vector, vector-th-unbox,
                    directory, filepath,
                    aeson, cereal
  hs-source-dirs:   library
  ghc-options:      -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
  default-language: Haskell2010

executable kathu
  import:           kathu-extensions
  main-is:          Main.hs
  other-modules:    Kathu.App
                    -- Editor
                    Kathu.Editor.Dialogs
                    Kathu.Editor.Dialogs.Entity
                    Kathu.Editor.File
                    Kathu.Editor.Main
                    Kathu.Editor.Panels
                    Kathu.Editor.Resources
                    Kathu.Editor.Types
                    Kathu.Editor.Util.GtkMisc
                    Kathu.Editor.Util.PropertyGrid
  other-modules:    Paths_kathu
  build-depends:    base             ^>=4.13,
                    kathu,
                    verda,
                    aeson            ^>=1.4,
                    apecs            ^>=0.9.1,
                    apecs-physics    ^>=0.4.4,
                    containers       ^>=0.6.2,
                    hashtables       >=1.2.0 && <1.3.0,
                    mono-traversable >=1.0.9 && <1.1,
                    gi-gdk           ^>=3.0.0,
                    gi-gdkpixbuf     ^>=2.0.23,
                    gi-gio           ^>=2.0.2,
                    gi-glib          ^>=2.0.23,
                    gi-gobject       ^>=2.0.22,
                    gi-gtk           ^>=3.0.0,
                    haskell-gi       ^>=0.23.0,
                    haskell-gi-base  ^>=0.23.0,
                    sdl2             ^>=2.5,
                    filepath, lens, linear, random, sdl2-image, sdl2-ttf, text, vector, vector-algorithms
  hs-source-dirs:   exec
  ghc-options:      -threaded -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
  default-language: Haskell2010

test-suite kathu-test
  import:           kathu-extensions
  type:             exitcode-stdio-1.0 
  build-depends:    base                    ^>=4.13,
                    kathu,
                    HUnit,
                    containers,
                    linear,
                    vector
  hs-source-dirs:   test
  ghc-options:      -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
  default-language: Haskell2010
  main-is:          Test.hs
  other-modules:    Kathu.Test.Entity,
                    Kathu.Test.Graphics,
                    Kathu.Test.Util