cabal-version:       2.4
name:                verda
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Erin Torno
-- maintainer:
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules:  Verda.IO.Directory
                    -- Parsing
                    Verda.Parsing.Aeson
                    Verda.Parsing.Counting
                    -- Util
                    Verda.Util.Apecs
                    Verda.Util.Containers
                    Verda.Util.Dependency
                    Verda.Util.Flow
                    Verda.Util.Types
  build-depends:    base                 ^>=4.13,
                    aeson                ^>=1.4.7,
                    apecs                ^>=0.9.1,
                    apecs-physics        ^>=0.4.4,
                    bytestring           ^>=0.10.10,
                    cereal               ^>=0.5.8,
                    containers           ^>=0.6.2,
                    hashable             ^>=1.3,
                    hashtables           ^>=1.2.4,
                    lens                 ^>=4.18,
                    linear               ^>=1.21.3,
                    mtl                  ^>=2.2.2,
                    primitive            ^>=0.7,
                    text                 ^>=1.2.4,
                    unordered-containers ^>=0.2.10,
                    vector               ^>=0.12.1.2
  hs-source-dirs:   src
  ghc-options:      -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
  default-language: Haskell2010
  default-extensions: BangPatterns
                      ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      ExplicitForAll
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      NamedFieldPuns
                      OverloadedLabels
                      OverloadedStrings
                      PatternSynonyms
                      RankNTypes
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators