cabal-version:       2.4
name:                verda
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Erin Torno
-- maintainer:
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules:  Verda.Audio
                    Verda.Logger
                    Verda.Time
                    Verda.World
                    -- Event
                    Verda.Event.Controls
                    Verda.Event.EventHandler
                    -- Graphics
                    Verda.Graphics.Color
                    Verda.Graphics.Components
                    Verda.Graphics.Drawing
                    Verda.Graphics.Fonts
                    Verda.Graphics.Icons
                    Verda.Graphics.SpriteBuffer
                    Verda.Graphics.SpriteManager
                    Verda.Graphics.Sprites
                    -- IO
                    Verda.IO.Dictionary
                    Verda.IO.Directory
                    Verda.IO.Files
                    -- Parsing
                    Verda.Parsing.Aeson
                    Verda.Parsing.Counting
                    Verda.Parsing.Yaml
                    -- Util
                    Verda.Util.Apecs
                    Verda.Util.Containers
                    Verda.Util.Dependency
                    Verda.Util.Flow
                    Verda.Util.Types
  build-depends:    base                 ^>=4.13,
                    aeson                ^>=1.4.7,
                    apecs                ^>=0.9.1,
                    apecs-physics        ^>=0.4.4,
                    bytestring           ^>=0.10.10,
                    cereal               ^>=0.5.8,
                    containers           ^>=0.6.2,
                    directory            ^>=1.3.6,
                    filepath             ^>=1.4.2,
                    hashable             ^>=1.3,
                    hashtables           ^>=1.2.4,
                    lens                 ^>=4.18,
                    libyaml              ^>=0.1.2,
                    linear               ^>=1.21.3,
                    mono-traversable     ^>=1.0.15,
                    mtl                  ^>=2.2.2,
                    primitive            ^>=0.7,
                    sdl2                 ^>=2.5.2,
                    sdl2-image           ^>=2.0,
                    sdl2-mixer           ^>=1.1,
                    sdl2-ttf             ^>=2.1,
                    template-haskell     ^>=2.15,
                    text                 ^>=1.2.4,
                    unordered-containers ^>=0.2.10,
                    vector               ^>=0.12.1.2,
                    vector-algorithms    ^>=0.8,
                    vector-th-unbox      ^>=0.2.1.7,
                    yaml                 ^>=0.11.5
  hs-source-dirs:   src
  ghc-options:      -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
  default-language: Haskell2010
  default-extensions: BangPatterns
                      ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      ExplicitForAll
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      NamedFieldPuns
                      OverloadedLabels
                      OverloadedStrings
                      PatternSynonyms
                      RankNTypes
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators

test-suite verda-test
  type:             exitcode-stdio-1.0 
  build-depends:    base              ^>=4.13,
                    verda,
                    HUnit             ^>=1.6
  hs-source-dirs:   test
  ghc-options:      -Wall -Werror -Wincomplete-record-updates -Wredundant-constraints -Wincomplete-uni-patterns
  default-language: Haskell2010
  main-is:          Test.hs
  other-modules:    Verda.Test.Graphics.Color